--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ img {
 header {
   padding: 0.25rem 1rem;
   background-color: #2e3a46;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
 
 header img {
